--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.12.1",
     "axios": "^1.6.2",
     "firebase": "^10.7.0",
     "react": "^18.2.0",
