--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -7,3 +7,6 @@ python-dotenv==1.0.0
 pytz==2023.3.post1
 sqlparse==0.4.4
 tzdata==2023.3
+drf_yasg==1.21.7
+django-rest-swagger==2.2.0
+djangorestframework-simplejwt==5.3.0
